kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_json_with_filepath-8.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 3,
  "filename": "<workspace>/only_with_float.json",
  "line": 1,
  "node": {
    "data": {
      "args": [],
      "config": {
        "column": 0,
        "end_column": 1,
        "end_line": 3,
        "filename": "<workspace>/only_with_float.json",
        "line": 1,
        "node": {
          "data": {
            "items": [
              {
                "column": 0,
                "end_column": 1,
                "end_line": 3,
                "filename": "<workspace>/only_with_float.json",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 17,
                    "end_line": 2,
                    "filename": "<workspace>/only_with_float.json",
                    "line": 2,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"float_value\"",
                        "value": "float_value"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 19,
                    "end_column": 23,
                    "end_line": 2,
                    "filename": "<workspace>/only_with_float.json",
                    "line": 2,
                    "node": {
                      "data": {
                        "binary_suffix": null,
                        "value": {
                          "data": 0.33,
                          "type": "Float"
                        }
                      },
                      "type": "NumberLit"
                    }
                  }
                }
              }
            ]
          },
          "type": "Config"
        }
      },
      "kwargs": [],
      "name": {
        "column": 0,
        "end_column": 1,
        "end_line": 3,
        "filename": "<workspace>/only_with_float.json",
        "line": 1,
        "node": {
          "ctx": "Load",
          "names": [
            {
              "column": 0,
              "end_column": 1,
              "end_line": 3,
              "filename": "<workspace>/only_with_float.json",
              "line": 1,
              "node": "only_with_float"
            }
          ],
          "pkgpath": ""
        }
      }
    },
    "type": "Schema"
  }
}
